syntax = "proto3";

package crud;

option go_package = "./crud";

message Data {
  string Id = 1;
  bytes Raw = 2;
}

message CreateRequest{
  bytes Raw = 1;
}

message CreateResponse {
  string Id = 1;
}

message ReadRequest {
  string Id = 1;
}

message ReadResponse {
  bytes Raw = 1;
}

message UpdateRequest {
  Data Data = 1;
}

message UpdateResponse {
}

message DeleteRequest {
  string Id = 1;
}

message DeleteResponse {
}

service CRUD {
  rpc Create(CreateRequest) returns (CreateResponse) {}
  rpc Read(ReadRequest) returns (ReadResponse) {}
  rpc Update(UpdateRequest) returns (UpdateResponse) {}
  rpc Delete(DeleteRequest) returns (DeleteResponse) {}
}
